App now requests user for name if not in local storage,username now stored in local storage, option can no longer be selected if energy requirements are not met,now displays alert when energy is too low, added additional styling

--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ main {
 /*Search bar*/
 .search-box {
   width: 100%;
-  margin: 0 0 75px;
+  margin: 0 0 35px;
   z-index: 4;
 }
 
@@ -70,6 +70,15 @@ main {
 .search-box .search-bar:focus {
   background-color: rgba(255, 255, 255, 0.925);
 }
+/*Weather Styling*/
+.location,
+.weather {
+  font-style: italic;
+}
+.weather {
+  font-weight: 600;
+  font-size: 1.1em;
+}
 
 /*Button Styling*/
 .option {
@@ -79,7 +88,13 @@ main {
   background: transparent;
   color: #fff;
 }
-
+.stats-container {
+  width: max-content;
+  margin: 1em auto;
+  padding: 0 2em;
+  border: 4px solid #fff;
+  border-radius: 10px;
+}
 .stats-container ul {
   padding: 0;
 }
